test/library/standard/Random/stonea/permutationAssociative.good
$CHPL_HOME/modules/standard/Random.chpl:175: In function 'permutation':
$CHPL_HOME/modules/standard/Random.chpl:183: error: permutation does not support non-rectangular arrays
permutationAssociative.chpl:5: Function 'permutation' instantiated as: permutation(arr: [DefaultAssociativeDom(int(64),true)] real(64), param algorithm: RNG = 1)
